--- a/atividadeAvaliativa/style.css
+++ b/atividadeAvaliativa/style.css
@@ -53,5 +53,30 @@ div.sobreNos {
     text-align: right;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    pad: 1px;
+    padding: 1px;
+}
+
+.endereco {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    padding-bottom: 15px;
+}
+
+footer {
+    font-family: Arial, Helvetica, sans-serif;
+    height: 20px;
+    padding-top: 5px;
+    background-color: #54545a;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: white;
 }
