--- a/atividadeAvaliativa/style.css
+++ b/atividadeAvaliativa/style.css
@@ -63,8 +63,8 @@ ul {
 
 footer {
     font-family: Arial, Helvetica, sans-serif;
-    height: 20px;
-    padding-top: 5px;
+    height: 10px;
+    padding-top: 1%;
     background-color: #54545a;
     text-align: center;
 }
