Landing page 2 feita até o button

--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -183,7 +183,7 @@ a {
     text-decoration: none;
     color: #fff;
     font-weight: bold;
-    background-color: rgb(40, 150, 40);
+    background-color: #289628;
     padding: 10px;
     border-radius: 20px;
 }
