--- a/landingPage2/style.css
+++ b/landingPage2/style.css
@@ -18,10 +18,17 @@ header {
     padding: 1em 2em ;
     position: fixed;
     width: 100%;
-    height: 60px;
+    height: 10rem;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.imagemLogo {
+    position: absolute;
+    top: 0.2rem;
+    left: 10rem;
+    height: 18rem;
 }
 
 ul {
@@ -48,3 +55,85 @@ li:hover {
     border-color: #000000;
     border-radius: 8px;
 }
+
+.conteudo {
+    font-size: 1.6rem;
+    background-color: #fff;
+    padding: 1.5rem;
+    text-align: center;
+    margin-top: 4rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80%;
+    padding-top: 14rem;
+    z-index: 1;
+    border-radius: 20px;   
+}
+
+h1 {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
+h1 strong {
+    font-size: 3.5rem;
+    color: #ff0000e8;
+}
+
+h3 {
+    font-size: 2.1rem;
+    margin-bottom: 2rem;
+}
+
+h3 a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 2.1rem;
+}
+
+h3 a:hover {
+    text-decoration: underline;
+    color: #ff0000e8;
+}
+
+.imagens-site {
+    border-radius: 35px;
+    width: 800px;
+    margin-bottom: 1rem;
+}
+
+figcaption {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.8rem;
+}
+
+@media(min-width: 280px) and (max-widht: 820px) {
+    .imagens-site {
+        border-radius: 25px;
+        width: 90%;
+        height: 70%;
+    }
+}
+
+button {
+    margin-top: 3rem;
+    font-size: 3rem;
+    background-color: white;
+}
+
+button a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    background-color: #289628;
+    padding: 10px;
+    border-radius: 25px;
+}
+
+button a:hover {
+    color: #000;
+    border: solid;
+    border-width: 2px;
+    background-color: #289628;
+}
+
