--- a/projeto final/style.css
+++ b/projeto final/style.css
@@ -6,3 +6,57 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+html {
+    font-size: 10px;
+}
+
+li {
+    list-style: none;  
+}
+
+a {
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 1.9rem;
+}
+
+p {
+    font-size: 1.2rem;
+}
+
+header {
+    width: 100%;
+    height: 5rem;
+    background-color: aliceblue;
+    position: fixed;
+    top: 0;
+    z-index: 333;
+}
+
+.conteudo {
+    width: 96%;
+    max-width: 117rem;
+    margin: 0 auto;
+}
+
+.navbar {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1.5rem;
+}
+
+.navbar h1{
+    text-transform: uppercase;
+    color: #5b5963;
+    font-weight: 600; /*Grossura da fonte*/
+    letter-spacing: 2px;
+    cursor: pointer;
+}
+
+/*13:07*/
