--- a/projeto final/style.css
+++ b/projeto final/style.css
@@ -57,6 +57,121 @@ header {
     font-weight: 600; /*Grossura da fonte*/
     letter-spacing: 2px;
     cursor: pointer;
+    padding-left: 3rem;
 }
 
-/*13:07*/
+.navbar ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar ul a{
+    font-size: 1.2rem;
+    padding: 1.5rem;
+    padding-right: 2rem;
+    text-transform: uppercase;
+    color: #5b5963;
+    font-weight: 400;
+    letter-spacing: 2px;
+    transition: all 0.4s ease;
+}
+
+.navbar ul a:hover{
+    color: white;
+    background-color: #fd735a;
+}
+
+.background-img {
+    max-width: 114rem;
+    height: 40rem;
+    background: url(img/Neues-Projekt2.jpg) no-repeat center center / cover;
+    margin: 5rem auto;
+    border-radius: 1rem;
+}
+
+main {
+    width: 100%;
+    max-width: 80rem;
+    background-color: white;
+    margin: 0 auto;
+    padding: 3rem;
+    border-radius: 1.5rem;
+    margin-top: -15rem;
+}
+
+main h2{
+    font-size: 3rem; /*tamanho da fonte*/
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
+
+main .perfil-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 3rem 0;
+}
+
+main .perfil-container .perfil {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .perfil-container .perfil .img-container {
+    width: 8rem;
+    height: 8rem;
+    background: url(img/avatar.jfif) no-repeat center center / cover;
+    border-radius: 0.5rem;
+}
+
+main .perfil-container .perfil .texto {
+    margin: 1rem;
+    color: #5b5963;
+    font-size: 1.2rem;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+.profile .texto .h3 {
+    text-transform: uppercase;
+}
+
+.btn {
+    display: inline-block;
+    text-transform: capitalize;
+    font-size: 1.2rem;
+    padding: 0.3rem 1.5rem;
+    background-color: #fd735a;
+    border-radius: 0.3rem;
+}
+
+main .conteudo p{
+    color: #5b5963;
+    margin: 1rem 0;
+}
+
+main .conteudo h4{
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #5b5963;
+    margin: 2rem 0;
+}
+
+main .conteudo .img-conteudo-container {
+    width: 100%;
+    height: 35rem;
+    background: url(img/play2.jpg) no-repeat center center / cover;
+    border-radius: 2rem;
+}
+
+blockquote {
+    font-size: 1.4rem;
+    padding: 1rem 2.8rem;
+    line-height: 1.6;
+    font-weight: 600;
+    box-shadow: inset 0.5rem 0 0 #fd735a;
+    background-color: #f5f5f5;
+}
