--- a/projeto final/style.css
+++ b/projeto final/style.css
@@ -175,3 +175,152 @@ blockquote {
     box-shadow: inset 0.5rem 0 0 #fd735a;
     background-color: #f5f5f5;
 }
+
+.tags {
+    display: flex;
+    align-items: center;
+}
+
+.tags p {
+    font-size: 1.4rem;
+    text-transform: capitalize;
+}
+
+.tags a {
+    display: inline-block;
+    padding: 0.3rem 1.5rem;
+    background-color: #f5f5f5;
+    color: #5b5963;
+    font-size: 1.2rem;
+    text-transform: capitalize;
+    margin: 0 0.5rem;
+}
+
+.artigos {
+    width: 100%;
+    background-color: #f5f5f5;
+    margin: 5rem 0;
+    padding: 5rem 0;
+}
+
+.artigos .artigos-titulo {
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%;
+    position: relative;
+}
+
+.artigos-titulo h5 {
+    font-size: 10rem;
+    font-weight: 600;
+    letter-spacing: 3px;
+    position: relative;
+    color: rgba(223, 223, 223, 0.308);
+}
+
+.artigos-titulo h6 {
+    font-size: 4rem;
+    font-weight: 200;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #5b5963;
+}
+
+.container-cartoes {
+    display: flex;
+    justify-content: space-between;
+    margin: 4rem auto;
+    gap: 5rem;
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+.container-cartoes .imagem-cartao {
+    max-width: 100%;
+    height: 24rem;
+    background: url(img/xbox.jpg) no-repeat center center / cover;
+    position: relative;
+}
+
+.container-cartoes .cartao-container-dois .imagem-cartao {
+    background: url(img/wii.jpg) no-repeat center center / cover;
+}
+
+.container-cartoes .cartao-container-tres .imagem-cartao {
+    background: url(img/nintendo.jpg) no-repeat center center / cover;
+}
+
+.container-cartoes .imagem-cartao a{
+    text-transform: capitalize;
+    font-size: 1.2rem;
+    padding: 0.3rem 1.5rem;
+    display: inline;
+    color: #429f98;
+    font-weight: 400;
+    background-color: white;
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+    transition: all 0.4s ease;
+}
+
+.container-cartoes:hover{
+    transform: translateY(-1rem);
+}
+
+.container-cartoes:hover a{
+    background-color: #fd735a;
+    color: white;
+}
+
+.container-cartoes .cartao-texto {
+    background-color: white;
+    padding: 2rem;
+    box-shadow: 0 0 0.3rem gray;
+}
+
+.container-cartoes .cartao-texto h4 {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+}
+
+.container-cartoes .cartao-texto p {
+    font-size: 1.2rem;
+}
+
+.artigos .button {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.artigos .btn {
+    font-size: 1.4rem;
+    letter-spacing: 1px;
+    font-weight: 200;
+    border-radius: none;
+    padding: 0.5rem 3rem;
+}
+
+footer {
+    background-color: #222;
+    padding: 3rem 0;
+}
+
+.icons {
+    text-align: center;
+}
+
+.icons .social i{
+    font-size: 3rem;
+    color: grey;
+    padding: 1rem;
+    transition: all 0.4s ease;
+}
+
+.icons .social i:hover {
+    color: white;
+    cursor: pointer;
+}
