--- a/projeto final/style.css
+++ b/projeto final/style.css
@@ -144,8 +144,15 @@ main .perfil-container .perfil .texto {
     text-transform: capitalize;
     font-size: 1.2rem;
     padding: 0.3rem 1.5rem;
+    color: #5b5963;
     background-color: #fd735a;
     border-radius: 0.3rem;
+}
+
+.btn:hover {
+    background-color: #5b5963;
+    color: white;
+    cursor: pointer;
 }
 
 main .conteudo p{
