--- a/projeto final/style.css
+++ b/projeto final/style.css
@@ -145,12 +145,12 @@ main .perfil-container .perfil .texto {
     font-size: 1.2rem;
     padding: 0.3rem 1.5rem;
     color: #5b5963;
-    background-color: #fd735a;
+    background-color: rgb(224, 223, 223);
     border-radius: 0.3rem;
 }
 
 .btn:hover {
-    background-color: #5b5963;
+    background-color: #fd735a;
     color: white;
     cursor: pointer;
 }
